Revision history for Perl extension AnyEvent.

4.85 Sat Jul 18 06:16:14 CEST 2009
        - nail the signal race problem in perl once and for all
          (see $AnyEvent::MAX_SIGNAL_LATENCY).
        - take advantage of Async::Interrupt if it is available.
        - load Time::HiRes and Guard modules on demand only.
        - add optional/recommended modules section to AnyEvent
          documentation.
        - reduce memory usage considerably (and reduce startup penalty)
          by not using "strict", "warnings" and "overload" modules.
        - work around buggy windows/openbsd perls and provide EBADMSG
          and EPROTO ourselves when missing.
	- improve perl 5.6 compatibility of the core event loop.
        - made Net::SSLeay version 1.33 a soft requirement.

4.83 Fri Jul 17 16:56:26 CEST 2009
	- implement AnyEvent::Socket::getprotobyname.
	- AnyEvent::CondVar's will now detect recursive blocking
          waits and will croak, as too many people fall into
          this trap.
        - AnyEvent::Handle will now call ->destroy on itself after
          executing the on_error callback, instead of doing some
          half-baked internal shutdown, for fatal errors.
        - clarify on_eof behaviour w.r.t. the read queue and
          on_read callbacks.
	- ignore some possible spurious wake-ups in tcp_connect.

4.82 Sat Jul 11 00:34:55 CEST 2009
	- POE and Event backends didn't accept some callable objects as 
          callbacks.
	- use Config module instead of POSIX module to detect signal names
          in AnyEvent::Strict and AnyEvent::Impl::EventLib, as the POSIX
          module doesn't even have all POSIX signals :/.
        - use more workarounds around the many refcnt/corruption bugs in
          Event::Lib.
        - work around a race condition in perl's select, causing t/03_child.t
          to rarely fail.

4.81 Thu Jul  9 10:30:30 CEST 2009
        - AnyEvent::Handle didn't properly diagnose write errors