@@ -44,5 +44,3 @@ eg/listen
 eg/handle
 eg/ae0.pl
 eg/ae2.pl
-
-META.yml                                 Module meta-data (added by MakeMaker)
