@@ -1,11 +1,0 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         AnyEvent
-version:      1.02
-version_from: lib/AnyEvent.pm
-installdirs:  site
-requires:
-    Event:                         0.86
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.23
